@@ -1,3 +1,8 @@
+2018-03-01  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/84538
+	* gfortran.dg/class_array_23.f03: New test.
+
 2018-03-01  Richard Sandiford  <richard.sandiford@linaro.org>
 
 	PR rtl-optimization/84528
